--- a/static/styles.css
+++ b/static/styles.css
@@ -2,14 +2,16 @@
 :root{ 
 /* -------- COLORS ---------
 /*Primary Blues*/
---primeLight: #c3fdff;
---primeMedium: #90caf9;
---primeDark: #5d99c6;
+--primeLight: #f5f5f5;
+--primeMedium: #c2c2c2;
+--primeDark: #000000;
 
 /*Secondary */
+
 --secondLight: #b085f5;
 --secondMedium: #7e57c2;
 --secondDark: #4d2c91;
+
 
 /*Grays*/
 --footerGray: #F5F5F5;
